add flame chart and spec-to-chart highlighting

--- a/src/features/performance/PerfViewer.css
+++ b/src/features/performance/PerfViewer.css
@@ -7,3 +7,12 @@
   padding-top: 0;
   background: var(--light-gray-color);
 }
+
+.perf-chart {
+  overflow: auto;
+  width: 100%;
+  display: flex;
+  padding: 5px;
+  padding-top: 0;
+  background: var(--light-gray-color);
+}
