--- a/src/features/performance/PerfViewer.css
+++ b/src/features/performance/PerfViewer.css
@@ -9,10 +9,23 @@
 }
 
 .perf-chart {
-  overflow: auto;
+  /* overflow: auto; */
   width: 100%;
+  height: 100%;
+
   display: flex;
-  padding: 5px;
+  padding: 2px;
   padding-top: 0;
   background: var(--light-gray-color);
+}
+
+.chart {
+  flex: auto;
+  min-width: 0;
+  position: relative;
+}
+
+.perf-chart {
+  display: flex;
+  flex-direction: column;
 }
