separate click and hover on text

--- a/src/components/input-panel/spec-editor/index.css
+++ b/src/components/input-panel/spec-editor/index.css
@@ -14,3 +14,10 @@
 .editor-header.right-align {
   justify-content: flex-end;
 }
+
+.myGlyphMarginClass {
+  background: red;
+}
+.myContentClass {
+  background: lightblue;
+}
