--- a/src/features/performance/PerfViewer.css
+++ b/src/features/performance/PerfViewer.css
@@ -1,5 +1,5 @@
 .perf-pane {
-  overflow: auto;
+  overflow: hidden;
   width: 100%;
   flex: 1;
   display: flex;
@@ -9,23 +9,19 @@
 }
 
 .perf-chart {
-  /* overflow: auto; */
-  width: 100%;
   height: 100%;
-
+  min-width: 0px;
+  flex-grow: 1;
   display: flex;
   padding: 2px;
   padding-top: 0;
   background: var(--light-gray-color);
+  display: flex;
+  flex-direction: column;
 }
 
 .chart {
   flex: auto;
-  min-width: 0;
+  width: 100%;
   position: relative;
-}
-
-.perf-chart {
-  display: flex;
-  flex-direction: column;
 }
