feat: connecting flame chart hovering/cliscking to spec

--- a/src/components/input-panel/spec-editor/index.css
+++ b/src/components/input-panel/spec-editor/index.css
@@ -15,9 +15,10 @@
   justify-content: flex-end;
 }
 
-.myGlyphMarginClass {
-  background: red;
-}
 .myContentClass {
   background: lightblue;
+}
+
+.hoverByFlame {
+  background: #0000ff20;
 }
