--- a/src/features/performance/Controls.css
+++ b/src/features/performance/Controls.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  height: 60px;
+  height: 80px;
   align-items: center;
   justify-content: center;
 }
@@ -13,7 +13,9 @@
 .slider__track,
 .slider__range,
 .slider__left-value,
-.slider__right-value {
+.slider__right-value,
+.slider__min-value,
+.slider__max-value {
   position: absolute;
 }
 
@@ -21,6 +23,7 @@
 .slider__range {
   border-radius: 3px;
   height: 5px;
+  margin-top: 20px;
 }
 
 .slider__track {
@@ -36,9 +39,16 @@
 
 .slider__left-value,
 .slider__right-value {
+  color: #0066cc;
+  font-size: 12px;
+  margin-top: 35px;
+  margin-bottom: 15px;
+}
+
+.slider__min-value,
+.slider__max-value {
   color: #dee2e6;
   font-size: 12px;
-  margin-top: 20px;
 }
 
 .slider__left-value {
@@ -46,6 +56,14 @@
 }
 
 .slider__right-value {
+  right: -4px;
+}
+
+.slider__min-value {
+  left: 6px;
+}
+
+.slider__max-value {
   right: -4px;
 }
 
@@ -85,7 +103,7 @@
   cursor: pointer;
   height: 18px;
   width: 18px;
-  margin-top: 4px;
+  margin-top: 44px;
   pointer-events: all;
   position: relative;
 }
@@ -99,7 +117,7 @@
   cursor: pointer;
   height: 18px;
   width: 18px;
-  margin-top: 4px;
+  margin-top: 44px;
   pointer-events: all;
   position: relative;
 }
