--- a/src/features/performance/Controls.css
+++ b/src/features/performance/Controls.css
@@ -1,8 +1,13 @@
+.control-container {
+  margin-top: 10px;
+}
+
 .container {
   display: flex;
-  height: 80px;
+  height: 120px;
   align-items: center;
   justify-content: center;
+  margin-top: -60px;
 }
 
 .slider {
