fix: reposition the controls for the dataflow graph directly above it

--- a/src/features/performance/Controls.css
+++ b/src/features/performance/Controls.css
@@ -1,5 +1,13 @@
+.controls-container {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--white-color);
+  border-top: solid 2px var(--light-gray-color);
+}
+
 .control-container {
-  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .container {
