--- a/src/features/dataflow/Sidebar.css
+++ b/src/features/dataflow/Sidebar.css
@@ -59,3 +59,8 @@
   height: 100%;
   flex-direction: column;
 }
+
+.total-runtime {
+  font-size: x-large !important;
+  color: var(--black-color) !important;
+}
